--- a/index.html
+++ b/index.html
@@ -263,8 +263,9 @@
         </blockquote> -->        
         <p>
           I received my Master’s degree in Applied Mathematics from Sharif University of Technology, Tehran, Iran, and 
-		  I am currently pursuing a Ph.D. in Computer Science at The University of Georgia.
+		  I am currently pursuing a Ph.D. in Computer Science under supervision of Dr. John A. Miller at The University of Georgia.
 		  My research interests focus on machine learning, time series forecasting using Neural Networks and Large Language Models, and symbolic regression for scientific discovery.
+		  We are currently developing a symbolic regression model for time series forecasting, and the following is an abstract of this work.
         </p>
         <p>
           <!-- <ul> -->
@@ -274,7 +275,14 @@
             <!-- <li><b>Tools & Technologies:</b> Git, Docker, Linux, Pytorch, Diffusion Models, GANs </li> -->
           <!-- </ul> -->
           
-		  <b> Abstract. </b> Time series
+		  <b> Abstract. </b> 
+			Time series forecasting is a critical area in various fields. 
+			While neural network models often achieve high accuracy, 
+			they are frequently criticized for being "black boxes" with limited interpretability.
+			In scientific discovery, model interpretability is essential, which is where neural networks fall short.
+			Symbolic regression, on the other hand, offers interpretable models, but discovering symbolic
+			equations is challenging due to the vast search space involved. Our goal is to develop a scalable 
+			symbolic regression method capable of providing interpretability for time series datasets.
         </p>
           
       </div>
