--- a/index.html
+++ b/index.html
@@ -261,13 +261,13 @@
 
           </h2>
         </blockquote> -->        
-        <p>
+        <p style="text-align: justify;">
           I received my Master’s degree in Applied Mathematics from Sharif University of Technology, Tehran, Iran, and 
 		  I am currently pursuing a Ph.D. in Computer Science under supervision of Dr. John A. Miller at The University of Georgia.
 		  My research interests focus on machine learning, time series forecasting using Neural Networks and Large Language Models, and symbolic regression for scientific discovery.
 		  We are currently developing a symbolic regression model for time series forecasting, and the following is an abstract of this work.
         </p>
-        <p>
+        <p style="text-align: justify;">
           <!-- <ul> -->
             <!-- <li><b>Languages:</b> Python, Java, Scala, C, C++, Bash</li>           -->
             <!-- <li><b>Libraries:</b> NumPy, Pandas, OpenCV </li> -->
