--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                 class="mdi-navigation-close right"></i></span>
             <ul>
 			<p>
-              In this project, we aimed to enhance Large Language Models' (LLMs) understanding of implicit humor and sarcasm in sentence similarity assessments by integrating sentiment analysis.
+              This project aims to enhance Large Language Models' (LLMs) understanding of implicit humor and sarcasm in sentence similarity assessments by integrating sentiment analysis.
 			  Our approach adjusts similarity scores based on sentiment evaluation, improving LLMs' accuracy in interpreting complex expressions.
 			  This advancement has applications in content moderation and automated analysis.
             </p>
