--- a/index.html
+++ b/index.html
@@ -453,113 +453,113 @@
 
 
 
-<section id="projects" class="section scrollspy">
-  <h3 class="page-title white-text teal">Projects</h3>
-  <div class="container">
-    <div class="row">
+<!-- <section id="projects" class="section scrollspy"> -->
+  <!-- <h3 class="page-title white-text teal">Projects</h3> -->
+  <!-- <div class="container"> -->
+    <!-- <div class="row"> -->
 
       <!-- Symbolic Regression for Time Series Forcasting (Ongoing) -->
-      <div class="col s12 m6">
-        <div class="card medium">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img alt="Scala time series project" src="/assets/img/SR.jpg" style="height: 100%; width: 100%" class="activator" />
-          </div>
-          <div class="card-content">
-            <span class="card-title activator teal-text hoverline"> Symbolic Regression for Time Series Forcasting (Ongoing) <i
-                class="mdi-navigation-more-vert right"></i></span>
+      <!-- <div class="col s12 m6"> -->
+        <!-- <div class="card medium"> -->
+          <!-- <div class="card-image waves-effect waves-block waves-light"> -->
+            <!-- <img alt="Scala time series project" src="/assets/img/SR.jpg" style="height: 100%; width: 100%" class="activator" /> -->
+          <!-- </div> -->
+          <!-- <div class="card-content"> -->
+            <!-- <span class="card-title activator teal-text hoverline"> Symbolic Regression for Time Series Forcasting (Ongoing) <i -->
+                <!-- class="mdi-navigation-more-vert right"></i></span> -->
             
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text"><small>Accomplishments</small><i
-                class="mdi-navigation-close right"></i></span>
-            <ul>
-			<p>
-              In this project, we are developing a scalable symbolic regression model to apply in time series forecasting.
-			  The focus is on enhancing interpretability, which is valuable for scientific discovery.
-			  This approach aims to provide clear and understandable insights from complex data.
-			 </p>
-            </ul>
-          </div>
-        </div>
-      </div>
+          <!-- </div> -->
+          <!-- <div class="card-reveal"> -->
+            <!-- <span class="card-title grey-text"><small>Accomplishments</small><i -->
+                <!-- class="mdi-navigation-close right"></i></span> -->
+            <!-- <ul> -->
+			<!-- <p> -->
+              <!-- In this project, we are developing a scalable symbolic regression model to apply in time series forecasting. -->
+			  <!-- The focus is on enhancing interpretability, which is valuable for scientific discovery. -->
+			  <!-- This approach aims to provide clear and understandable insights from complex data. -->
+			 <!-- </p> -->
+            <!-- </ul> -->
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
 
       <!-- ARMA Modeling for Estimating Lives Saved by COVID-19 Vaccination -->
-      <div class="col s12 m6">
-        <div class="card medium">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img alt="ARMA COVID-19 project" src="/assets/img/arma.jpg" style="height: 100%; width: 100%" class="activator" />
-          </div>
-          <div class="card-content">
-            <span class="card-title activator teal-text hoverline">ARMA Modeling for Estimating Lives Saved by COVID-19 Vaccination<i
-                class="mdi-navigation-more-vert right"></i></span>
+      <!-- <div class="col s12 m6"> -->
+        <!-- <div class="card medium"> -->
+          <!-- <div class="card-image waves-effect waves-block waves-light"> -->
+            <!-- <img alt="ARMA COVID-19 project" src="/assets/img/arma.jpg" style="height: 100%; width: 100%" class="activator" /> -->
+          <!-- </div> -->
+          <!-- <div class="card-content"> -->
+            <!-- <span class="card-title activator teal-text hoverline">ARMA Modeling for Estimating Lives Saved by COVID-19 Vaccination<i -->
+                <!-- class="mdi-navigation-more-vert right"></i></span> -->
             
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text"><small>Accomplishments</small><i
-                class="mdi-navigation-close right"></i></span>
-            <ul>
-              <p>
-			  In this project, we aimed to estimate the number of lives saved by COVID-19 vaccination in 2021 using ARMA modeling on pre-vaccine mortality data from 2020.
-			  We trained and optimized the model to forecast deaths in 2021 without vaccination and compared it to observed data.
-			  The results underscore the significant role of vaccination in reducing COVID-19 fatalities.
-			  </p>
-            </ul>
-          </div>
-        </div>
-      </div>
+          <!-- </div> -->
+          <!-- <div class="card-reveal"> -->
+            <!-- <span class="card-title grey-text"><small>Accomplishments</small><i -->
+                <!-- class="mdi-navigation-close right"></i></span> -->
+            <!-- <ul> -->
+              <!-- <p> -->
+			  <!-- In this project, we aimed to estimate the number of lives saved by COVID-19 vaccination in 2021 using ARMA modeling on pre-vaccine mortality data from 2020. -->
+			  <!-- We trained and optimized the model to forecast deaths in 2021 without vaccination and compared it to observed data. -->
+			  <!-- The results underscore the significant role of vaccination in reducing COVID-19 fatalities. -->
+			  <!-- </p> -->
+            <!-- </ul> -->
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
 
       <!-- Multi-Model Integrated Sentence Similarity Framework -->
-      <div class="col s12 m6">
-        <div class="card medium">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img alt="NLP project" src="/assets/img/similarity.jpg" style="height: 100%; width: 100%" class="activator" />
-          </div>
-          <div class="card-content">
-            <span class="card-title activator teal-text hoverline">Multi-Model Integrated Sentence Similarity Framework<i
-                class="mdi-navigation-more-vert right"></i></span>
+      <!-- <div class="col s12 m6"> -->
+        <!-- <div class="card medium"> -->
+          <!-- <div class="card-image waves-effect waves-block waves-light"> -->
+            <!-- <img alt="NLP project" src="/assets/img/similarity.jpg" style="height: 100%; width: 100%" class="activator" /> -->
+          <!-- </div> -->
+          <!-- <div class="card-content"> -->
+            <!-- <span class="card-title activator teal-text hoverline">Multi-Model Integrated Sentence Similarity Framework<i -->
+                <!-- class="mdi-navigation-more-vert right"></i></span> -->
             <!-- <p>Developed a computational framework for sentence similarity assessments.</p> -->
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text"><small>Accomplishments</small><i
-                class="mdi-navigation-close right"></i></span>
-            <ul>
-			<p>
-              This project aims to enhance Large Language Models' (LLMs) understanding of implicit humor and sarcasm in sentence similarity assessments by integrating sentiment analysis.
-			  Our approach adjusts similarity scores based on sentiment evaluation, improving LLMs' accuracy in interpreting complex expressions.
-			  This advancement has applications in content moderation and automated analysis.
-            </p>
-			</ul>
-          </div>
-        </div>
-      </div>
+          <!-- </div> -->
+          <!-- <div class="card-reveal"> -->
+            <!-- <span class="card-title grey-text"><small>Accomplishments</small><i -->
+                <!-- class="mdi-navigation-close right"></i></span> -->
+            <!-- <ul> -->
+			<!-- <p> -->
+              <!-- This project aims to enhance Large Language Models' (LLMs) understanding of implicit humor and sarcasm in sentence similarity assessments by integrating sentiment analysis. -->
+			  <!-- Our approach adjusts similarity scores based on sentiment evaluation, improving LLMs' accuracy in interpreting complex expressions. -->
+			  <!-- This advancement has applications in content moderation and automated analysis. -->
+            <!-- </p> -->
+			<!-- </ul> -->
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
 
       <!-- Fake Image Region Detection in Deepfake Images -->
-      <div class="col s12 m6">
-        <div class="card medium">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img alt="Deepfake detection" src="/assets/img/Deepfake.jpg" style="height: 100%; width: 100%" class="activator" />
-          </div>
-          <div class="card-content">
-            <span class="card-title activator teal-text hoverline">Fake Image Region Detection in Deepfake Images<i
-                class="mdi-navigation-more-vert right"></i></span>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text"><small>Accomplishments</small><i
-                class="mdi-navigation-close right"></i></span>
-            <ul>
-              <p>
-			  In this project, we aimed to detect deepfake images and their manipulated regions using the Progressive Spatio-Channel Correlation Network (PSCC-Net) with HRNet as the backbone.
-			  We trained the model on newly generated facial manipulation data to identify fake regions and provide descriptive prompts of the manipulated parts.
-			  Our approach advances deepfake detection by both localizing and describing the fake areas in images.
-			  </p>
-            </ul>
-          </div>
-        </div>
-      </div>
+      <!-- <div class="col s12 m6"> -->
+        <!-- <div class="card medium"> -->
+          <!-- <div class="card-image waves-effect waves-block waves-light"> -->
+            <!-- <img alt="Deepfake detection" src="/assets/img/Deepfake.jpg" style="height: 100%; width: 100%" class="activator" /> -->
+          <!-- </div> -->
+          <!-- <div class="card-content"> -->
+            <!-- <span class="card-title activator teal-text hoverline">Fake Image Region Detection in Deepfake Images<i -->
+                <!-- class="mdi-navigation-more-vert right"></i></span> -->
+          <!-- </div> -->
+          <!-- <div class="card-reveal"> -->
+            <!-- <span class="card-title grey-text"><small>Accomplishments</small><i -->
+                <!-- class="mdi-navigation-close right"></i></span> -->
+            <!-- <ul> -->
+              <!-- <p> -->
+			  <!-- In this project, we aimed to detect deepfake images and their manipulated regions using the Progressive Spatio-Channel Correlation Network (PSCC-Net) with HRNet as the backbone. -->
+			  <!-- We trained the model on newly generated facial manipulation data to identify fake regions and provide descriptive prompts of the manipulated parts. -->
+			  <!-- Our approach advances deepfake detection by both localizing and describing the fake areas in images. -->
+			  <!-- </p> -->
+            <!-- </ul> -->
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
 
-    </div>
-  </div>
-</section>
+    <!-- </div> -->
+  <!-- </div> -->
+<!-- </section> -->
 
 
 
