--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
       <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Yousef
-        Fekri</a><span class="black-text">Machine Learning Researcher</span>
+        Fekri</a><span class="black-text">COmputer Scientist</span>
     </div>
   </nav>
 
@@ -209,7 +209,7 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2><span class="teal"> Yousef Fekri's Homepage </span></h2>
+              <h2><span> Yousef Fekri's Homepage </span></h2>
               <!-- <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#0B2442"></span></h5> -->
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>
