removed linkedin button

--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@
 			  Motivated problem Solver with a focus on deep learning models to address real-world challenges. Passionate about using logical reasoning and innovative machine learning approaches to develop practical solutions.
 			  </h5>
             </div>
-            <div class="social">
-              <a href="http://linkedin.com/in/yousef-fekri-140631103" target="_blank">
-                <button class="icon-btn linkedin">
-                  <i class="fa fa-linkedin"></i>
-                </button>
-              </a>
+            <!-- <div class="social"> -->
+              <!-- <a href="http://linkedin.com/in/yousef-fekri-140631103" target="_blank"> -->
+                <!-- <button class="icon-btn linkedin"> -->
+                  <!-- <i class="fa fa-linkedin"></i> -->
+                <!-- </button> -->
+              <!-- </a> -->
               <!-- <a href="https://github.com/youseffekri/" target="_blank"> -->
                 <!-- <button class="icon-btn github"> -->
                   <!-- <i class="fa fa-github"></i> -->
@@ -241,7 +241,7 @@
 
                   </span>
               </a> -->
-            </div>
+            <!-- </div> -->
           </div>
         </div>
       </div>
