--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <title> Yousef Fekri | Machine Learning Researcher </title>
+  <title> Yousef Fekri | Computer Scientist </title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -35,10 +35,10 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Yousef Fekri | Machine Learning Researcher" />
-  <meta property="og:description" content="Machine Learning Researcher" />
+  <meta property="og:title" content="Yousef Fekri | Computer Scientist" />
+  <meta property="og:description" content="Computer Scientist" />
   <!-- <meta property="og:url" content="https://youseffekri.github.io/" /> -->
-  <meta property="og:site_name" content="Yousef Fekri | Machine Learning Researcher" />
+  <meta property="og:site_name" content="Yousef Fekri | Computer Scientist" />
   <!-- <meta property="article:publisher" content="https://youseffekri.github.io/" /> -->
   <!-- <meta property="og:image" content="https://youseffekri.github.io/examples/preview.JPG" /> -->
   <!-- Twitter -->
@@ -93,6 +93,7 @@
         <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
             class="mdi-social-person small"></i><span>About</span></a>
       </li>
+	  
       <!-- <li class="bold"> -->
         <!-- <a aria-label="Navigate to the Experience section" href="#experience" -->
           <!-- class="waves-effect waves-dark teal-text"><i -->
@@ -105,6 +106,7 @@
         <!-- <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i -->
             <!-- class="mdi-av-my-library-books small"></i><span>Projects</span></a> -->
       <!-- </li> -->
+
 
       <li class="bold">
         <!--
