Background and research

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
       </li>
 
       <li class="bold">
-        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
-            class="mdi-social-person small"></i><span>About</span></a>
+        <a aria-label="Navigate to the Background section" href="#background" class="waves-effect waves-dark teal-text"><i
+            class="mdi-social-person small"></i><span>Background</span></a>
       </li>
 	  
       <li class="bold">
@@ -130,8 +130,8 @@
   <nav class="hide-on-large only">
     <ul id="slide-out" class="side-nav">
       <li class="bold">
-        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
-            class="mdi-social-person small"></i><span>About</span></a>
+        <a aria-label="Navigate to the Background section" href="#background" class="waves-effect waves-dark teal-text"><i
+            class="mdi-social-person small"></i><span>Background</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
@@ -164,14 +164,17 @@
             <div class="caption">
               <h2><span class="teal"> Yousef Fekri's Homepage </span></h2>       
               <h5>
-				Motivated problem Solver with a focus on deep learning models to address real-world challenges. Passionate about using logical reasoning and innovative machine learning approaches to develop practical solutions.
-				Time series forecasting is a critical area in various fields. 
-				While neural network models often achieve high accuracy, 
-				they are frequently criticized for being "black boxes" with limited interpretability.
-				In scientific discovery, model interpretability is essential, which is where neural networks fall short.
-				Symbolic regression, on the other hand, offers interpretable models, but discovering symbolic
-				equations is challenging due to the vast search space involved. Our goal is to develop a scalable 
-				symbolic regression method capable of providing interpretability for time series datasets.
+			  I am a Ph.D. student in Computer Science at The University of Georgia, working under the supervision of 
+			  Dr. John A. Miller. My research focuses on <strong>neural symbolic regression for multivariate time series forecasting</strong>, 
+			  aiming to develop interpretable models that maintain high predictive accuracy while reducing computational complexity. 
+			  While deep learning methods achieve strong predictive performance, their black-box nature limits interpretability, 
+			  making them less suitable for scientific discovery.
+			  
+			  To address this, I have developed <strong>ARX_Symb</strong>, a lightweight neural symbolic regression framework that enhances forecasting 
+			  by integrating stepwise feature selection and attention-based feature importance. By refining symbolic equations to 
+			  extract meaningful patterns, my approach balances accuracy and interpretability while improving computational efficiency. 
+			  I hope to guide my <strong>comprehensive exam questions</strong> toward this research direction, ensuring a strong theoretical and 
+			  practical foundation in symbolic regression for time series forecasting.
 			  </h5>
             </div>
           </div>
@@ -179,15 +182,18 @@
       </div>
     </section>
 
-    <!-- Second Section: About -->
-    <section id="about" class="section scrollspy">
-      <h3 class="page-title white-text teal">About</h3>
+    <!-- Second Section: Background -->
+    <section id="background" class="section scrollspy">
+      <h3 class="page-title white-text teal">Background</h3>
       <div class="container flow-text">   
         <p style="text-align: justify;">
-          I received my Master’s degree in Applied Mathematics from Sharif University of Technology, Tehran, Iran, and 
-		  I am currently pursuing a Ph.D. in Computer Science under supervision of Dr. John A. Miller at The University of Georgia.
-		  My research interests focus on machine learning, time series forecasting using Neural Networks and Large Language Models, and symbolic regression for scientific discovery.
-		  We are currently developing a symbolic regression model for time series forecasting, and the following is an abstract of this work.
+          I have a strong mathematical background, earning an <strong>M.Sc. in applied mathematics</strong> from Sharif University of Technology 
+			and a <strong>B.Sc. in pure mathematics</strong> from Semnan University. This foundation has allowed me to approach machine learning 
+			problems with both theoretical rigor and practical implementation skills. In addition to my research in neural symbolic 
+			regression, I have worked on implementing and benchmarking machine learning models in Scala, including 
+			AR, ARX, ARIMA, NN, CNN, and Transformers. My projects also extend to <strong>LLMs for humor and sarcasm detection</strong>, 
+			as well as <strong>deep learning-based fake image region detection</strong>. These diverse experiences have strengthened my ability 
+			to develop efficient, scalable, and interpretable AI models across different domains.
         </p>         
       </div>
     </section>
