--- a/index.html
+++ b/index.html
@@ -173,8 +173,9 @@
 			  To address this, I have developed <strong>ARX_Symb</strong>, a lightweight neural symbolic regression framework that enhances forecasting 
 			  by integrating stepwise feature selection and attention-based feature importance. By refining symbolic equations to 
 			  extract meaningful patterns, my approach balances accuracy and interpretability while improving computational efficiency. 
-			  I hope to guide my <strong>comprehensive exam questions</strong> toward this research direction, ensuring a strong theoretical and 
-			  practical foundation in symbolic regression for time series forecasting.
+			  We plan to improve attention-based selection by incorporating a pre-training phase and also apply nonlinear models to 
+			  find the best exponents for the endogenous and exogenous variables in our model, further enhancing its ability to identify 
+			  meaningful patterns in time series data.
 			  </h5>
             </div>
           </div>
