--- a/index.html
+++ b/index.html
@@ -215,19 +215,19 @@
             <h4 class="brown-text light"> Languages </h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/Java.jpg" class="responsive-img" /> Java
+                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" /> Python
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/Scala.jpg" class="responsive-img" /> Scala
+              </div>
+			  <div class="col s4 m2">
+                <img alt="" src="/assets/img/Java.jpg" class="responsive-img" /> Java
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/C.jpg" class="responsive-img" /> C/C++
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
+                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" /> Shell Scripting
               </div>
             </div>
           </div>
@@ -238,19 +238,19 @@
             <h4 class="brown-text light">Libraries</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
+                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" /> NumPy
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
+                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" /> Pandas
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
+                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" /> OpenCV
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
+                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" /> scikit-learn
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
+                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" /> matplotlib
               </div>
             </div>
           </div>
@@ -261,23 +261,20 @@
           <div class="card-content">
             <h4 class="brown-text light">Frameworks</h4>
             <div class="row text-center">
+			  <div class="col s4 m2">
+				<img alt="Scikit-Learn Logo" src="/assets/img/scikit-learn-logo.png" class="responsive-img" /> Scikit-Learn
+			  </div>
+			  <div class="col s4 m2">
+				<img alt="Statsmodels Logo" src="/assets/img/statsmodels-logo.png" class="responsive-img" /> Statsmodels
+			  </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/django-logo.webp" class="responsive-img" />Django
-              </div>
-              <!-- <div class="col s4 m2"> -->
-                <!-- <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask -->
-              <!-- </div> -->
-              <!-- <div class="col s4 m2"> -->
-                <!-- <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap -->
-              <!-- </div> -->
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
+                <img alt="" src="/assets/img/pytorch-logo.png" class="responsive-img" /> PyTorch
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/tensorflow-logo-1.png" class="responsive-img" />TensorFlow
+                <img alt="" src="/assets/img/tensorflow-logo-1.png" class="responsive-img" /> TensorFlow
               </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/pytorch-logo.png" class="responsive-img" />PyTorch
+			  <div class="col s4 m2">
+                <img alt="" src="/assets/img/django-logo.webp" class="responsive-img" /> Django
               </div>
             </div>
           </div>
