sk and st logos

--- a/index.html
+++ b/index.html
@@ -262,10 +262,10 @@
             <h4 class="brown-text light">Frameworks</h4>
             <div class="row text-center">
 			  <div class="col s4 m2">
-				<img alt="Scikit-Learn Logo" src="/assets/img/scikit-learn-logo.png" class="responsive-img" /> Scikit-Learn
+				<img alt="Scikit-Learn Logo" src="/assets/img/scikit-learn-logo-small.png" class="responsive-img" /> Scikit-Learn
 			  </div>
 			  <div class="col s4 m2">
-				<img alt="Statsmodels Logo" src="/assets/img/statsmodels-logo.png" class="responsive-img" /> Statsmodels
+				<img alt="Statsmodels Logo" src="/assets/img/statsmodels-logo-v2-horizontal.svg" class="responsive-img" /> Statsmodels
 			  </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/pytorch-logo.png" class="responsive-img" /> PyTorch
