--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" /> scikit-learn
               </div>
 			  <div class="col s4 m2">
-				<img alt="Statsmodels Logo" src="/assets/img/statsmodels-logo-v2-horizontal.svg" class="responsive-img" /> Statsmodels
+				<img alt="" src="/assets/img/statsmodels-logo-v2-horizontal.svg" class="responsive-img" /> Statsmodels
 			  </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" /> matplotlib
