--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" /> scikit-learn
               </div>
 			  <div class="col s4 m2">
-                <img alt="" src="/assets/img/statsmodels-logo-v2-no-text.svg" class="responsive-img" /> statsmodels
+                <img alt="" src="/assets/img/statsmodels-logo-v2-no-text.jpg" class="responsive-img" /> statsmodels
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" /> matplotlib
