--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 		This foundation has enabled me to approach machine learning problems with both theoretical 
 		depth and practical implementation skills. In addition to my research in neural symbolic 
 		regression, I have worked on implementing and benchmarking various machine learning models 
-		in Scala and Python, including AR, ARX, ARIMA, neural networks, CNNs, and Transformers. 
+		in Scala and Python, including AR, ARX, ARIMA, neural networks, and Transformers. 
 		I have also worked on projects involving different machine learning domains, including 
 		time series forecasting, computer vision, and large language models, applying advanced 
 		techniques to improve model accuracy and interpretability across different applications.
