--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 			  </p>
 			  
 			  <p style="text-align: justify;">
-			  To address this, I have developed <strong>ARX_Symb</strong>, a lightweight neural symbolic regression framework that enhances forecasting 
+			  To address this, we have developed <strong>ARX_Symb</strong>, a lightweight neural symbolic regression framework that enhances forecasting 
 			  by integrating stepwise feature selection and attention-based feature importance. By refining symbolic equations to 
 			  extract meaningful patterns, my approach balances accuracy and interpretability while improving computational efficiency. 
 			  We plan to improve attention-based selection by incorporating a pre-training phase and also apply nonlinear models to 
