--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <!-- Main Content-->
   <main>
     <!-- First Section: Heading lines and image -->
-    <section id="intro" class="section scrollspy full-height">
+    <section id="intro" class="section scrollspy">
       <div class="overlay"></div>
       <div class="container flow-text">
         <div class="col-md-9">
