--- a/index.html
+++ b/index.html
@@ -164,20 +164,21 @@
             <div class="caption">
               <h2><span class="teal"> Yousef Fekri's Homepage </span></h2>              
 			  <p style="text-align: justify;">
-			  I am a Ph.D. student in Computer Science at The University of Georgia, working under the supervision of 
-			  Dr. John A. Miller. My research focuses on "neural symbolic regression for multivariate time series forecasting", 
-			  aiming to develop interpretable models that maintain high predictive accuracy while reducing computational complexity. 
-			  While deep learning methods achieve strong predictive performance, their black-box nature limits interpretability, 
-			  making them less suitable for scientific discovery.
+			  I am a Ph.D. student in Computer Science at The University of Georgia, working under the supervision
+			  of Dr. John A. Miller. My research focuses on neural symbolic regression for multivariate time series
+			  forecasting, aiming to develop interpretable models that maintain high predictive accuracy while reducing
+			  computational complexity. While deep learning methods achieve strong predictive performance, their
+			  black-box nature limits interpretability, making them less suitable for scientific discovery.
 			  </p>
 			  
 			  <p style="text-align: justify;">
-			  To address this, we have developed <strong>ARX_Symb</strong>, a lightweight neural symbolic regression framework that enhances forecasting 
-			  by integrating stepwise feature selection and attention-based feature importance. By refining symbolic equations to 
-			  extract meaningful patterns, my approach balances accuracy and interpretability while improving computational efficiency. 
-			  We plan to improve attention-based selection by incorporating a pre-training phase and also apply nonlinear models to 
-			  find the best exponents for the endogenous and exogenous variables in our model, further enhancing its ability to identify 
-			  meaningful patterns in time series data.
+			  To address this, we have developed ARX_Symb, a lightweight neural symbolic regression framework
+			  that enhances forecasting by integrating stepwise feature selection and attention-based feature
+			  importance. By refining symbolic equations to extract meaningful patterns, this approach balances
+			  accuracy and interpretability while improving computational efficiency. We plan to improve attention-based
+			  selection by incorporating a pre-training phase and applying nonlinear models to determine the best exponents
+			  for the endogenous and exogenous variables, further enhancing the model's ability to identify meaningful
+			  patterns in time series data.
 			  </p>
             </div>
           </div>
@@ -190,15 +191,14 @@
       <h3 class="page-title white-text teal">Background</h3>
       <div class="container flow-text">   
         <p style="text-align: justify;">
-		I have a strong mathematical background, earning an M.Sc. in applied mathematics from 
-		Sharif University of Technology and a B.Sc. in pure mathematics from Semnan University. 
+		I have a strong mathematical background, having earned an M.Sc. in applied mathematics
+		from Sharif University of Technology and a B.Sc. in pure mathematics from Semnan University.
 		This foundation has enabled me to approach machine learning problems with both theoretical 
-		depth and practical implementation skills. In addition to my research in neural symbolic 
-		regression, I have worked on implementing and benchmarking various machine learning models 
-		in Scala and Python, including AR, ARX, ARIMA, neural networks, and Transformers. 
-		I have also worked on projects involving different machine learning domains, including 
-		time series forecasting, computer vision, and large language models, applying advanced 
-		techniques to improve model accuracy and interpretability across different applications.
+		depth and practical implementation skills. In addition to my research in neural symbolic regression, 
+		I have worked on implementing and benchmarking various machine learning models in Scala and Python, 
+		including AR, ARX, ARIMA, neural networks, and Transformers. My work spans multiple domains, including 
+		time series forecasting, computer vision, and large language models, where I have applied advanced 
+		techniques to enhance model accuracy and interpretability across different applications.
         </p>         
       </div>
     </section>
